Fix on package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "iwalkalone/Translator",
+    "name": "iwalkalone/translator",
     "autoload": {
         "psr-0" : {
             "iwalkalone\\Translator" : "src"
